[gd_scene load_steps=2 format=3 uid="uid://b5p3k7g8xh3ym"]

[ext_resource type="Script" path="res://scripts/ui/resource_hud.gd" id="1"]

[node name="ResourceHUD" type="Control"]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
script = ExtResource("1")

[node name="TopBar" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 48.0
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="TopBar"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="TopBar/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="FoodContainer" type="HBoxContainer" parent="TopBar/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="FoodIcon" type="Label" parent="TopBar/MarginContainer/HBoxContainer/FoodContainer"]
layout_mode = 2
text = "üçé"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FoodLabel" type="Label" parent="TopBar/MarginContainer/HBoxContainer/FoodContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="FoodRateLabel" type="Label" parent="TopBar/MarginContainer/HBoxContainer/FoodContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
text = "+0.0/s"
vertical_alignment = 1

[node name="CoalContainer" type="HBoxContainer" parent="TopBar/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="CoalIcon" type="Label" parent="TopBar/MarginContainer/HBoxContainer/CoalContainer"]
layout_mode = 2
text = "‚õèÔ∏è"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CoalLabel" type="Label" parent="TopBar/MarginContainer/HBoxContainer/CoalContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="CoalRateLabel" type="Label" parent="TopBar/MarginContainer/HBoxContainer/CoalContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
text = "+0.0/s"
vertical_alignment = 1

[node name="GoldContainer" type="HBoxContainer" parent="TopBar/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="GoldIcon" type="Label" parent="TopBar/MarginContainer/HBoxContainer/GoldContainer"]
layout_mode = 2
text = "üí∞"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GoldLabel" type="Label" parent="TopBar/MarginContainer/HBoxContainer/GoldContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="GoldRateLabel" type="Label" parent="TopBar/MarginContainer/HBoxContainer/GoldContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
text = "+0.0/s"
vertical_alignment = 1
